# codebot

./: .env  .env.example  .gitignore  CodeBot_flow.ipynb  LICENSE  README.md  codebot_dimension_comparisons.json  codebot_report.csv  codebot_run_results.json  main.py  orjson.py  pyproject.toml
codebot/: README.md  __init__.py  classification.py  classify.py  cli.py  code_parser.py  compare.py  comparison.py  config.py  dimensions.py  extraction.py  github_client.py  github_repo.py  ingest_paper.py  ingest_repo.py  match.py  models.py  rag.py  run.py  runner.py  schemas.py  text_parser.py  utils.py  writer.py
codebot-reports/: all_papers.csv  parker_etal_2024.csv  parker_etal_2024.json  parker_etal_2024_code_evidence.json  parker_etal_2024_matches.json  parker_etal_2024_paper_evidence.json  wei_etal_2025.csv  wei_etal_2025.json  wei_etal_2025_code_evidence.json  wei_etal_2025_matches.json  wei_etal_2025_paper_evidence.json
codebot/analysis/: __init__.py  classification.py  extraction.py
codebot/comparison/: __init__.py  dimension_compare.py  matchers.py
codebot/ingestion/: __init__.py  github_repo.py
codebot/parsing/: __init__.py  grobid.py  landing_ai.py
codebot/reporting/: __init__.py  export.py
demo-assets/: codebot.html  styles.css
papers/: pairs-specification.csv
pydantic/: __init__.py
requests/: __init__.py
rich/: __init__.py  console.py  table.py
templates/: codebot-results.html  codebot_report.csv  styles.css
tenacity/: __init__.py
tests/: conftest.py  test_cli.py  test_ingest_repo.py  test_match.py  test_utils.py
